<RelativeLayout xmlns:android="http://schemas.android.com/apkres/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:padding="16dp">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/input_km"
        android:hint="@string/input_hint_km"
        android:singleLine="true"
        android:layout_below="@+id/input_label_km"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/input_time"
        android:layout_below="@+id/input_label_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/input_hint_time"
        android:singleLine="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/input_pauses"
        android:layout_below="@+id/input_label_pauses"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/input_hint_pauses"
        android:singleLine="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        android:id="@+id/button_calculate"
        android:layout_below="@+id/input_pauses"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/input_label_km"
        android:id="@+id/input_label_km"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/input_label_time"
        android:id="@+id/input_label_time"
        android:layout_below="@+id/input_km"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/input_label_pauses"
        android:id="@+id/input_label_pauses"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_time"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:textAllCaps="true" />

</RelativeLayout>

